...
                    app:hintTextColor="?attr/colorPrimary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_signup_card_subtitle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_signup_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:imeOptions="actionNext"
                        android:textColor="?attr/colorOnSurface"
                        android:fontFamily="@font/dm_sans" />
...
